# ShevchenkoDA

lab-00/: .gitignore  report.md
lab-00/app/src/main/kotlin/org/example/: App.kt
lab-01/: report.md
lab-01/app/src/main/kotlin/org/example/: App.kt
lab-02/: linked_list.jl  performance_plots.jl  report.md  task_solutions.jl
lab-03/: memoization.hs  recursion.hs  report.md  tasks.hs
lab-06/: CMakeLists.txt  report.md  run_example.sh  run_tests.sh
lab-06/benchmarks/: CMakeLists.txt  benchmark_bst.cpp
lab-06/examples/: example.cpp
lab-06/include/: binary_search_tree.h  tree_traversal.h
lab-06/results/: benchmark_results.json
lab-06/scripts/: plot_results.py
lab-06/src/: binary_search_tree.cpp  tree_traversal.cpp
lab-06/tests/: CMakeLists.txt  test_binary_search_tree.cpp
lab-07/: CMakeLists.txt  report.md  run_benchmarks.sh
lab-07/benchmarks/: CMakeLists.txt  benchmark_heap.cpp
lab-07/examples/: example.cpp
lab-07/include/: heap.h  heap_impl.h  heapsort.h  heapsort_impl.h  priority_queue.h  priority_queue_impl.h
lab-07/results/: benchmark_results.json
lab-07/scripts/: plot_results.py
lab-07/tests/: CMakeLists.txt  test_heap.cpp
lab-08/: CMakeLists.txt  report.md  run_example.sh
lab-08/benchmarks/: CMakeLists.txt  benchmark_greedy.cpp
lab-08/examples/: example.cpp
lab-08/include/: greedy_algorithms.h
lab-08/results/: benchmark_results.json  benchmarks.json
lab-08/scripts/: plot_results.py
lab-08/src/: greedy_algorithms.cpp
lab-08/tests/: CMakeLists.txt  test_greedy_algorithms.cpp
lab-09/: CMakeLists.txt  report.md  run_example.sh
lab-09/benchmarks/: CMakeLists.txt  benchmark_dp.cpp
lab-09/examples/: example.cpp
lab-09/include/: coin_change.h  fibonacci.h  knapsack.h  lcs.h  levenshtein.h  lis.h
lab-09/results/: benchmark_results.json
lab-09/scripts/: plot_results.py
lab-09/src/: coin_change.cpp  fibonacci.cpp  knapsack.cpp  lcs.cpp  levenshtein.cpp  lis.cpp
lab-09/tests/: CMakeLists.txt  test_dynamic_programming.cpp
lab-10/: AdjacencyListGraph.py  AdjacencyMatrixGraph.py  BFS.py  IterativeDFS.py  RecursiveDFS.py  algorithms.py  benches.py  report.md  tasks.py  test.py
lab10/: AdjList.java  AdjMatrix.java  Connectivity.java  Dijkstra.java  GraphTasks.java  IterDFS.java  PerformanceTest.java  RecDFS.java  TopologicalSort.java  plot_performance.py
